...
    @State var width = UIScreen.main.bounds.width
    @State var show : Float = 0.0
    
    @State var items_loaded : Bool = false
    
    @ObservedObject var bottom: bottom = GlobalBottom
    @ObservedObject var news: news = GlobalNews
    @ObservedObject var item: items = GlobalItems
    @ObservedObject var status: loading_webview = GlobalWebview
    @ObservedObject var realm: RealmControl = GlobalRealm
    
    @Environment(\.presentationMode) var presentation
    
...
                                .background(Color.theme)
                                .clipShape(Circle())
                            
                        }
                        .padding(.top, 10)
                        .buttonStyle(ScaleButtonStyle())
                        .accessibility(identifier: "exit")
                        
                        
                        Spacer()
                        
                        if (self.show == 1.0){
                            Text(self.news.news_single.title)
...
