...
    
    var body: some View {
        
        VStack(spacing: 10){
            if (true){
                HStack{
                    Text("Категории")
                        .font(.system(size: 26, weight: .bold, design: .rounded))
                    
                    Spacer()
                    
                    Image(systemName: "chevron.down")
                        .foregroundColor(Color.theme_foreground)
...
