...
                  
                     
                        
                    }) {
                        HStack{
                            Spacer()
                            Text("Готово")
                            Spacer()
                        }
                            .padding(.horizontal)
                            .padding(.vertical, 10)
                            .background(Color.theme)
                            .foregroundColor(.theme_foreground)
...
